# static-site-generator

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  main.sh  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
content/: index.md
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
src/: block.py  htmlnode.py  inline.py  main.py  textnode.py  utils.py
src/SSG/: block.py  inline.py  main.py
src/ssg/: __init__.py  block.py  htmlnode.py  inline.py  main.py
tests/: test_block.py  test_htmlnode.py  test_inline.py  test_textnode.py  test_utils.py
